--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -41,10 +41,11 @@
                     document.getElementById("getrespmsg").innerHTML =
 
                     this.responseText;
+                    alert("Message sent")
 
                 }
 
-                xhttp.open("POST", "http://localhost:35000/save");
+                xhttp.open("POST", "/log");
                 xhttp.setRequestHeader("content-type", "text/plain");
                 xhttp.send(message);
 
